Beginning to create an NLP chatbot